Fixed scrollbars

--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ body {
     color: #000000;
 }
 
-::-webkit-scrollbar {
-    -webkit-appearance: none;
+/* Hiding scroll bars */
+
+/* Firefox */
+html {
+    scrollbar-width: none;
+}
+.product-list {
+    scrollbar-width: none;
 }
